lib/bait/tests/inout_error/struct_init.in.bt
struct Empty{}

e := Empty{
	bad_field = 123
}
